--- a/APRA/Views/Home/Index.cshtml
+++ b/APRA/Views/Home/Index.cshtml
@@ -7,4 +7,8 @@
 </div>
 
 <div class="row">
+    <div class="col-md-4">sidebar</div>
+    <div class="col-md-8">
+        <div ng-view></div>
+    </div>
 </div>
